# DepoStokKontrolSistemiCBS

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 353df4e49cdf_initial_schema.py  b8f1c2a3d4e5_levels_and_georef.py  c5b435ba7e82_shipments_and_orders.py  e1cb68b00754_customers_and_isochrone_cache.py  f2797d4c4b28_shipment_loop_flag.py  f7689f6fa687_regions_table.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  errors.py  pagination.py  security.py
backend/app/models/: __init__.py  ai_usage.py  customer.py  isochrone_cache.py  level.py  notification.py  order.py  org.py  product.py  region.py  shipment.py  stock.py  storage_location.py  user.py  warehouse.py
backend/app/schemas/: ai.py  auth.py  dxf.py  geo.py  location.py  logistics.py  network.py  notification.py  product.py  report.py  stock.py  warehouse.py
backend/app/services/: csv_io.py  dxf_import.py  emailer.py  forecast.py  geo.py  geo_analysis.py  layout_builder.py  network_analysis.py  notification_service.py  ors.py  picking.py  report_service.py  scheduler.py  scoping.py  stock_service.py  tracking.py  vrp.py
backend/tests/: conftest.py  test_ai_safety.py  test_auth.py  test_dxf.py  test_forecast.py  test_geo.py  test_insights_orders.py  test_layout_builder.py  test_logistics.py  test_network.py  test_picking.py  test_products_notifications.py  test_stock.py  test_tracking.py  test_vrp.py
docs/: ASSETS-CREDITS.md
(+146 files in other folders)
